
# 设置交叉编译器 必须放在最前 
SET(CMAKE_C_COMPILER "arm-linux-gcc")
SET(CMAKE_CXX_COMPILER  "arm-linux-g++")

PROJECT(hello_so)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(BUILD_SHARED_LIBS ON)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})

SET(CMAKE_INSTALL_PREFIX "/home/code/doing/cmake/hello_so/")
set(CMAKE_C_FLAGS "-g -Wall -DZT_DEBUG")

ADD_SUBDIRECTORY( cstring )
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/cstring)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(hello_so ${DIR_SRCS})

TARGET_LINK_LIBRARIES(hello_so ztstring)

INSTALL(TARGETS hello_so RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/demo)
