PROJECT(hello_so)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(BUILD_SHARED_LIBS ON)

SET(CMAKE_SOURCE_DIR .)
SET(CMAKE_MODULE_PATH ${CMAKE_ROOT} ${CMAKE_SOURCE_DIR}/)


ADD_SUBDIRECTORY( cstring )
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(hello_so ${DIR_SRCS})

FIND_PACKAGE( libztstring REQUIRED)

MARK_AS_ADVANCED(
	LIBZTSTRING_INCLUDE_DIR
	LIBZTSTRING_LIB_DIR
)

IF (LIBZTSTRING_INCLUDE_DIR AND LIBZTSTRING_LIB_DIR)
	MESSAGE(STATUS "Found libdb libraries")
	INCLUDE_DIRECTORIES(${LIBZTSTRING_INCLUDE_DIR})
	MESSAGE( ${LIBZTSTRING_LIB_DIR} )
	TARGET_LINK_LIBRARIES(hello_so ${LIBZTSTRING_LIB_DIR})
ENDIF (LIBZTSTRING_INCLUDE_DIR AND LIBZTSTRING_LIB_DIR)

