PROJECT(ztstring)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(ztstring_test ${DIR_SRCS})
ADD_LIBRARY ( ztstring ${DIR_SRCS})

INSTALL(TARGETS ztstring  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/demo/lib)
#INSTALL(TARGETS ztstring ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/demo/lib)
